public/index.css
html, body {
  max-width: 100%;
  max-height: 100%;
  overflow-x: hidden;
  overflow-y: hidden;
  scrollbar-width: none;
  height: fit-content;
  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
}

html {
  background-color: #eaece9;
}

html::-webkit-scrollbar, body::-webkit-scrollbar {
  display: none;
}

/* Style the video: 100% width and height to cover the entire window */
#myVideo video {
  width: 100vw;
  height: 100vh;
  object-fit: cover;
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1;
}

/* Add some content at the bottom of the video/page */
.background {
  opacity: 0.2;
}

/* Style the button used to pause/play the video */
#myBtn {
  width: 200px;
  font-size: 18px;
  padding: 10px;
  border: none;
  background: #000;
  color: #fff;
  cursor: pointer;
}

#myBtn:hover {
  background: #ddd;
  color: black;
}

.home, #myVideo, #Education, #Projects, #Resume, #About, #Contact {
  visibility: hidden;
}

#Resume {
  height: 75%;
}

.video_overlays_left {
  float: left;
  left: 0;
  min-height: 370px;
  z-index: 300000;
  flex-grow: 1;
}

.video_overlays_right {
  right: 0;
  float: left;
  z-index: 300000;
  flex-grow: 1;
}

.video_overlays_middle {
  width: 100%;
  height: 75%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.footer {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  text-align: center;
}

.flex-container {
  display: flex;
}

.vertical-menu {
  margin: 0;
  position: fixed;
  top: 50%;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  /* Set a width if you like */
}

.footer a, .footer p {
  background-color: none;
  /* Grey background color */
  color: red;
  /* Black text color */
  text-decoration: none;
  /* Remove underline from links */
}

.vertical-menu a {
  margin: auto;
  background-color: none;
  /* Grey background color */
  color: red;
  /* Black text color */
  display: block;
  /* Make the links appear below each other */
  padding: 12px;
  /* Add some padding */
  text-decoration: none;
  /* Remove underline from links */
}

.group1 p, .group2 p {
  font-size: 15px;
  white-space: nowrap;
}

.center {
  position: fixed;
  top: 50%;
  left: 50%;
  /* bring your own prefixes */
  transform: translate(-50%, -50%);
}

.text-wrapping a {
  -ms-transform: rotate(270deg);
  /* IE 9 */
  transform: rotate(270deg);
  font-size: 15px;
  white-space: nowrap;
  height: 90px;
  width: 25px;
}

.iframeContainer {
  /* 1:1 Aspect Ratio */
}

.vertical-menu a:hover {}

.vertical-menu a.active {}

:root {
  --animate-duration: 4s;
}

.card-columns {
  display: inline-block;
}

